--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "electron-packager . backend --platform=win32 --arch=x64 --out=out"
+    "build": "electron-packager . mula_dashboard --platform=win32 --arch=x64 --out=out"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "canvas": "^2.11.2",
     "cors": "^2.8.5",
     "electron-packager": "^17.1.2",
+    "electron-wix-msi": "^5.1.3",
     "express": "^4.18.2",
     "jsbarcode": "^3.11.5",
     "multer": "^1.4.5-lts.1",
